--- a/app/views/admin/resellers/_social_urls.html.erb
+++ b/app/views/admin/resellers/_social_urls.html.erb
@@ -4,15 +4,9 @@
     <%= t 'admin.resellers.edit.social_urls' %>
   </legend>
 
-  <%= f.text_field :facebook_url do %>
-    <p class="help-block"><%= t 'admin.resellers.form.facebook_url_help' %></p>
-  <% end %>
+  <%= f.text_field :facebook_url, help: t('admin.resellers.form.facebook_url_help') %>
 
-  <%= f.text_field :twitter_url do %>
-    <p class="help-block"><%= t 'admin.resellers.form.twitter_url_help' %></p>
-  <% end %>
+  <%= f.text_field :twitter_url, help: t('admin.resellers.form.twitter_url_help') %>
 
-  <%= f.text_field :linkedin_url do %>
-    <p class="help-block"><%= t 'admin.resellers.form.linkedin_url_help' %></p>
-  <% end %>
+  <%= f.text_field :linkedin_url, help: t('admin.resellers.form.linkedin_url_help') %>
 </fieldset>
