--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,12 +1,6 @@
-<%= twitter_bootstrap_form_for @product, layout: :horizontal do |f| %>
+<%= bootstrap_form_for @product, layout: :horizontal do |f| %>
   <%= render 'shared/error_messages', model: @product %>
-  <%= f.text_field :name, required: true do %>
-    <p class="help-block"><%= t '.name_help' %></p>
-  <% end %>
-  <%= f.text_field :code, required: true do %>
-    <p class="help-block"><%= t '.code_help' %></p>
-  <% end %>
-  <%= f.actions do %>
-    <%= f.submit %>
-  <% end %>
+  <%= f.text_field :name, required: true, help: t('.name_help') %>
+  <%= f.text_field :code, required: true, help: t('.code_help') %>
+  <%= f.submit %>
 <% end %>
