--- a/app/views/admin/users/new.html.haml
+++ b/app/views/admin/users/new.html.haml
@@ -1,13 +1,12 @@
 - javascript 'user'
 - content_for :title, t('.title')
 %h1= t '.title'
-= twitter_bootstrap_form_for [:admin, @user], layout: :vertical do |f|
+= bootstrap_form_for [:admin, @user], layout: :vertical do |f|
   = render 'shared/error_messages', model: @user
   = hidden_field_tag :url, params[:url]
   = f.email_field :email, autocomplete: "off"
   = render partial: 'users/time_zone'
-  = f.collection_select :customer_id, [], @customers, :id, :name, {}, {class: 'form-control'}
+  = f.collection_select :customer_id, @customers, :id, :name, {}, {class: 'form-control'}
   = f.toggles t 'admin.users.menu.send_email' do
     = f.check_box :send_email, '', checked: true
-  = f.actions do
-    = f.submit
+  = f.submit
