--- a/app/views/deliverable_units/_form.html.erb
+++ b/app/views/deliverable_units/_form.html.erb
@@ -1,18 +1,10 @@
 <% require "#{Rails.application.root}/lib/localized_values" %>
-<%= twitter_bootstrap_form_for @deliverable_unit, layout: :horizontal do |f| %>
+<%= bootstrap_form_for @deliverable_unit, layout: :horizontal do |f| %>
   <%= render 'shared/error_messages', model: @deliverable_unit %>
-  <%= f.text_field :label, { placeholder: t('.label_placeholder')} do %>
-    <p class="help-block"><%= t '.label_help' %></p>
-  <% end %>
-  <%= f.text_field :ref do %>
-    <p class="help-block"><%= t '.ref_help' %></p>
-  <% end %>
-  <%= f.number_field :default_quantity, { step: 'any'} do %>
-    <p class="help-block"><%= t '.default_quantity_help' %></p>
-  <% end %>
-  <%= f.number_field :default_capacity, { step: 'any', min: '0' } do %>
-    <p class="help-block"><%= t '.default_capacity_help' %></p>
-  <% end %>
+  <%= f.text_field :ref, help: t('.ref_help') %>
+  <%= f.text_field :label, { placeholder: t('.label_placeholder'), help: t('.label_help') } %>
+  <%= f.number_field :default_quantity, { step: 'any', help: t('.default_quantity_help') } %>
+  <%= f.number_field :default_capacity, { step: 'any', min: '0', help: t('.default_capacity_help') } %>
   <div class="form-group" id="deliverable_unit_optimization_overload_multiplier_input">
     <label class="col-md-offset-2 col-md-8 field" for="deliverable_unit_optimization_overload_multiplier"><%= t 'activerecord.attributes.deliverable_unit.optimization_overload_multiplier' %></label>
     <div class="col-md-offset-2 col-md-8 field input-append form-inline">
@@ -37,7 +29,5 @@
       </div>
     </div>
   </div>
-  <%= f.actions do %>
-    <%= f.submit %>
-  <% end %>
+  <%= f.submit %>
 <% end %>
