--- a/app/views/destinations/import.html.erb
+++ b/app/views/destinations/import.html.erb
@@ -1,5 +1,5 @@
 <% javascript 'destination' %>
-
+<% checkbox_options = { label_class: 'col-md-offset-2 col-md-7', control_col: 'col-md-2' } %>
 <% content_for :title, t('.title') %>
 
 <h1><%= t '.title' %></h1>
@@ -15,33 +15,35 @@
   <div id="collapseCsv" class="panel-collapse collapse <%= !@import_csv.errors.empty? || @import_tomtom.errors.empty? ? 'in' : '' %>">
     <div class="panel-body">
       <p class="help-block"><%= t '.csv.help' %></p>
-      <%= twitter_bootstrap_form_for(@import_csv, url: destinations_import_csv_path, layout: :horizontal, multipart: true) do |f| %>
+      <%= bootstrap_form_for(@import_csv, url: destinations_import_csv_path, layout: :horizontal, multipart: true) do |f| %>
         <%= render 'shared/error_messages', model: @import_csv %>
-        <%= f.file_field :file, required: true do %>
-          <p class="help-block">
-            <%= t '.csv.file_help' %>
-            <% if @columns_default && !@columns_default.empty? %>
-              <i class="fa fa-exclamation-triangle fa-fw"></i> <%= t '.csv.custom_columns', s: @columns_default.values.join(', ') %>
-            <% end %>
-            <a data-toggle="modal" data-target="#import-help-modal" data-keyboard="true" href="#help" title="<%= t('.import_template_help') %>"><i class="fa fa-info-circle fa-fw"></i> <%= t('.import_template_help') %></a>
-          </p>
-        <% end %>
-        <%= f.toggles t '.destinations' do %>
-          <%= f.radio_button :replace, t('.replace_no'), 0, checked: !@import_csv.replace %>
+        <%= f.file_field :file, required: true %>
+        <p class="help-block col-md-offset-2">
+          <%= t('.csv.file_help') %>
+          <% if @columns_default && !@columns_default.empty? %>
+            <i class="fa fa-exclamation-triangle fa-fw"></i> <%= t '.csv.custom_columns', s: @columns_default.values.join(', ') %>
+          <% end %>
+          <a data-toggle="modal" data-target="#import-help-modal" data-keyboard="true" href="#help" title="<%= t('.import_template_help') %>"><i class="fa fa-info-circle fa-fw"></i> <%= t('.import_template_help') %></a>
+        </p>
+        <%= f.form_group :destinations, {label: {text: t('.destinations') }}  do %>
+          <%= f.radio_button :replace, 0, checked: !@import_csv.replace, label: t('.replace_no'), label_class: '' %>
           <p class="help-block"><%= t '.replace_no_help' %></p>
-          <%= f.radio_button :replace, t('.replace_yes'), 1, checked: @import_csv.replace %>
+          <%= f.radio_button :replace, 1, checked: @import_csv.replace, label: t('.replace_yes') %>
           <p class="help-block"><%= t '.replace_yes_help' %></p>
         <% end %>
-        <%= f.toggles t '.plannings' do %>
-          <%= f.check_box :delete_plannings, t('.delete_plannings') %>
-          <p class="help-block"><%= t '.delete_plannings_help' %></p>
+        <%= f.form_group :delete_plannings, {label: { text: t('.delete_plannings') }}.merge(checkbox_options)  do %>
+          <%= f.check_box :delete_plannings, label: '' %>
         <% end %>
-        <%= f.actions do %>
-          <%= f.submit t('all.verb.import'), {}, 'fa-upload' %>
-        <% end %>
+        <div class='form-group'>
+          <div class='col-md-offset-2 col-md-8 field'>
+            <p class="help-block">
+              <%= t '.delete_plannings_help' %>
+            </p>
+          </div>
+        </div>
+        <%= f.submit message: t('all.verb.import'), icon: 'fa fa-upload' %>
         <div class="form-group">
           <div class="col-md-offset-2 col-md-6">
-            <a href="/destination/import_template.csv" class="btn btn-default" role="button"><i class="fa fa-download fa-fw"></i> <%= t 'import.template_csv' %></a>
             <a href="/destination/import_template.excel" class="btn btn-default" role="button"><i class="fa fa-download fa-fw"></i> <%= t 'import.template_excel' %></a>
           </div>
         </div>
@@ -103,7 +105,7 @@
     <div id="collapseTomTom" class="panel-collapse collapse <%= !@import_tomtom.errors.empty? ? 'in' : '' %>">
       <div class="panel-body">
         <p class="help-block"><%= t '.tomtom.help' %></p>
-          <%= twitter_bootstrap_form_for(@import_tomtom, url: destinations_import_tomtom_path, layout: :horizontal, multipart: true) do |f| %>
+          <%= bootstrap_form_for(@import_tomtom, url: destinations_import_tomtom_path, layout: :horizontal, multipart: true) do |f| %>
             <%= render 'shared/error_messages', model: @import_tomtom %>
             <%= f.toggles t '.destinations' do %>
               <%= f.radio_button :replace, t('.replace_no'), 0, checked: !@import_tomtom.replace %>
