--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -7,13 +7,10 @@
         <h1><%= t('.forgot_your_password', default: 'Forgot your password?') %></h1>
       </div>
       <div class="panel-body">
-        <%= twitter_bootstrap_form_for resource, as: resource_name, url: password_path(resource_name), default_label_class: 'col-md-3 control-label', layout: :horizontal do |f| %>
+        <%= bootstrap_form_for resource, as: resource_name, url: password_path(resource_name), default_label_class: 'col-md-3 control-label', layout: :horizontal do |f| %>
           <%= f.email_field :email %>
-          <%= f.actions(class: 'col-md-offset-3 col-md-6') do %>
-            <%= f.submit t('.send_me_reset_password_instructions', default: 'Send me reset password instructions'), {}, 'fa-envelope' %>
-          <% end %>
+          <%= f.submit message: t('.send_me_reset_password_instructions', default: 'Send me reset password instructions'), icon: 'fa fa-envelope' %>
         <% end %>
-
         <%= render "devise/shared/links" %>
       </div>
     </div>
