--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -7,7 +7,7 @@
         <h1><%= t('.resend_unlock_instructions', default: "Resend unlock instructions") %></h1>
       </div>
       <div class="panel-body">
-        <%= twitter_bootstrap_form_for resource, as: resource_name, url: unlock_path(resource_name), default_label_class: 'col-md-3 control-label', layout: :horizontal do |f| %>
+        <%= bootstrap_form_for resource, as: resource_name, url: unlock_path(resource_name), default_label_class: 'col-md-3 control-label', layout: :horizontal do |f| %>
           <%= f.email_field :email %>
           <%= f.actions(class: 'col-md-offset-3 col-md-6') do %>
             <%= f.submit t('.resend_unlock_instructions', default: "Resend unlock instructions"), {}, 'fa-envelope' %>
