--- a/app/views/plannings/_flat_form.html.haml
+++ b/app/views/plannings/_flat_form.html.haml
@@ -1,18 +1,18 @@
 - options = @planning.id ? {layout: :vertical} : {layout: :vertical}
-= twitter_bootstrap_form_for @planning, options do |f|
+= bootstrap_form_for @planning, options do |f|
   = render 'shared/error_messages', model: @planning
   .d-flex.justify-content-start.align-items-end
     - if @planning.customer.enable_references
       .col
         - if @planning.id
-          = f.text_field :ref, false, { placeholder: t('activerecord.attributes.planning.ref_help') }
+          = f.text_field :ref, { placeholder: t('activerecord.attributes.planning.ref_help'), label: '' }
         - else
           = f.text_field :ref do
             %p.help-block= t('activerecord.attributes.planning.ref_help')
     .col
-      = f.text_field :name, false, required: true, placeholder: "#{t('activerecord.attributes.planning.name')}"
+      = f.text_field :name, required: true, placeholder: "#{t('activerecord.attributes.planning.name')}"
     .col
-      = f.text_field :date, false, { placeholder: t('plannings.form.default_date'), value: @planning.date ? l(@planning.date.to_time, format: :datepicker) : nil, input_group: content_tag('i', '', {class: 'fa fa-calendar fa-fw'})}
+      = f.text_field :date, { placeholder: t('plannings.form.default_date'), value: @planning.date ? l(@planning.date.to_time, format: :datepicker) : nil, input_group: content_tag('i', '', {class: 'fa fa-calendar fa-fw'})}
     - if @planning.new_record?
       = zoning_select f, @planning, t('plannings.edit.zonings.label')
     .col.d-flex
