--- a/app/views/users/password.html.erb
+++ b/app/views/users/password.html.erb
@@ -8,7 +8,7 @@
         <h1><%= t '.title' %></h1>
       </div>
       <div class="panel-body">
-        <%= twitter_bootstrap_form_for @user, url: set_password_user_path(@user), default_label_class: 'col-md-3 control-label', layout: :horizontal do |f| %>
+        <%= bootstrap_form_for @user, url: set_password_user_path(@user), default_label_class: 'col-md-3 control-label', layout: :horizontal do |f| %>
           <%= render 'shared/error_messages', model: @user %>
 
           <%= hidden_field_tag :url, edit_user_path(@user) %>
