--- a/app/views/vehicle_usage_sets/_form.html.erb
+++ b/app/views/vehicle_usage_sets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= twitter_bootstrap_form_for @vehicle_usage_set, layout: :horizontal do |f| %>
+<%= bootstrap_form_for @vehicle_usage_set, layout: :horizontal do |f| %>
   <%= render 'shared/error_messages', model: @vehicle_usage_set %>
   <%= f.text_field :name, required: true %>
   <div id="vehicle_usage_set_store_input" class="form-group">
@@ -181,7 +181,5 @@
       <p class="help-block"><%= t '.rest_start_stop_help' %></p>
     </div>
   </div>
-  <%= f.actions do %>
-    <%= f.submit %>
-  <% end %>
+  <%= f.submit %>
 <% end %>
